# MetodosNumericos

./: CMakeLists.txt  Ejercicio3Jacobi.cpp  Falsi.cpp  Gaus-Seidel.cpp  InterpolacionSegmentaria.cpp  Jacobi.cpp  PuntoFijo.cpp  RegresionPolinomial.cpp  RelajacionGaus-Seidel.cpp  a.out  basura.txt
Diferenciacion/: Diferenciacion.cpp  DiferenciacionTabla.cpp  derivadas.txt
EcuacionesDiferenciales/: EDOEuler.cpp  EDORk4.cpp  Euler.cpp  Euler.txt  Heun.cpp  PuntoMedio.cpp  RK4.cpp  RK4.txt  resultadosEulerSistEDOs.txt  resultadosRK4SistEDOs.txt
Integracion/: Gauss-Legendre.cpp  Simpson.cpp  SimpsonTabla.cpp  Trapecio.cpp  TrapecioTabla.cpp  ejercicio.cpp
Interpolacion/: InterpolacionLagrange.cpp  InterpolacionSegmentaria.cpp
Raices/: Biseccion.cpp  Falsi.cpp  Newton_Raphson.cpp  PuntoFijo.cpp  Secante.cpp
Regresion/: RegresionPolinomial.cpp
SistemaDeEcuaciones/: Gaus-Seidel.cpp  Gaus.cpp  RelajacionGaus-Seidel.cpp
