cmake_minimum_required(VERSION 3.20)
project(Metodos_Numericos)

set(CMAKE_CXX_STANDARD 14)

add_executable(Biseccion Raices/Biseccion.cpp)
add_executable(Falsi Raices/Falsi.cpp)
add_executable(Newton_Raphson Raices/Newton_Raphson.cpp)
add_executable(PuntoFijo Raices/PuntoFijo.cpp)
add_executable(Secante Raices/Secante.cpp)
add_executable(Gaus SistemaDeEcuaciones/Gaus.cpp)
add_executable(Jacobi Raices/Jacobi.cpp)
add_executable(Gaus-Seidel SistemaDeEcuaciones/Gaus-Seidel.cpp)
add_executable(Ejercicio3Jacobi Raices/Ejercicio3Jacobi.cpp)
add_executable(RelajacionGaus-Seidel SistemaDeEcuaciones/RelajacionGaus-Seidel.cpp)
add_executable(InterpolacionLagrange Interpolacion/InterpolacionLagrange.cpp)
add_executable(RegresionPolinomial Regresion/RegresionPolinomial.cpp)
add_executable(InterpolacionSegmentaria Interpolacion/InterpolacionSegmentaria.cpp)
add_executable(Trapecio Integracion/Trapecio.cpp)
add_executable(TrapecioTabla Integracion/TrapecioTabla.cpp)
add_executable(Simpson Integracion/Simpson.cpp)
add_executable(ejercicio Integracion/ejercicio.cpp)
add_executable(SimpsonTabla Integracion/SimpsonTabla.cpp)
add_executable(Gauss-Legendre Integracion/Gauss-Legendre.cpp)
add_executable(Euler EcuacionesDiferenciales/Euler.cpp)
add_executable(PuntoMedio EcuacionesDiferenciales/PuntoMedio.cpp)
add_executable(Heun EcuacionesDiferenciales/Heun.cpp)
add_executable(RK4 EcuacionesDiferenciales/RK4.cpp)
add_executable(EDOEuler EcuacionesDiferenciales/EDOEuler.cpp)
add_executable(EDORk4 EcuacionesDiferenciales/EDORK4.cpp)
add_executable(Diferenciacion Diferenciacion/Diferenciacion.cpp)
add_executable(DiferenciacionTabla Diferenciacion/DiferenciacionTabla.cpp)